examples/anthos-service-mesh-multicluster/mysql-docker/mysql-test.yaml
# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: mysql-test
  labels:
    app: mysql-test
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: mysql-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-test
  labels:
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-test
      version: v1
  template:
    metadata:
      labels:
        app: mysql-test
        version: v1
    spec:
      containers:
      - name: mysql-test
        image: GOOGLE_ARTIFACT_REGISTRY_REPO/mysql-test:v1.0.0
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
      volumes:
      - name: aiven-cert
        secret:
          secretName: aiven-tls
          items:
          - key: ca.pem
            path: ca.pem
